--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ platforms = ["linux-64"]
 
 [tool.pixi.pypi-dependencies]
 glymphopt = { path = ".", editable = true }
-gmri2fem = { path = "/home/jorgen/gmri2fem", editable = true }
+gmri2fem = { path = "./deps/gmri2fem", editable = true }
 
 [tool.pixi.tasks]
 
